# mp4ameta

./: Cargo.toml
src/: types.rs
src/atom/: data.rs  ident.rs  metaitem.rs
src/tag/: mod.rs
src/tag/userdata/: mod.rs
