[package]
name = "mp4ameta"
version = "0.13.0"
authors = ["Saecki <tobiasschmitz2001@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A library for reading and writing iTunes style MPEG-4 audio metadata."
categories = ["multimedia::audio", "parser-implementations"]
keywords = ["mp4", "m4a", "audio", "metadata", "parser"]
repository = "https://github.com/Saecki/rust-mp4ameta"
edition = "2024"
include = ["src", "LICENSE-APACHE", "LICENSE-MIT"]

[features]
## Allow serializing and deserializing tags
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"], optional = true }

[dev-dependencies]
walkdir = "2.5.0"
serde_json = "1.0.134"
